<resources>
    <string name="app_name">Hoax News</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">BOGA</string>
    <string name="text1">Let\'s Get Started</string>
    <string name="welcome">Selamat Datang di…</string>
    <string name="deskripsi">Mulai sekarang untuk merasakan \nfitur dari aplikasi BOGA</string>
    <string name="usernam">E-mail</string>
    <string name="password">Kata Sandi</string>
    <string name="daftar">Daftar</string>
    <string name="login">Masuk</string>
    <string name="register">Tidak punya akun? <a href="google.com">Daftar</a> </string>
    <string name="masuk">Sudah punya akun? <a href="google.com">Masuk</a> </string>
</resources>