<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Form_UserActivity"
    android:background="@color/white"
    android:padding="20sp" >


    <Button
        android:id="@+id/back"
        android:layout_width="38dp"
        android:layout_height="38dp"
        android:background="@drawable/ic_arrow_back"
    />

    <TextView
        android:id="@+id/admin_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/back"
        android:layout_marginTop="50dp"
        android:layout_marginStart="10sp"
        android:text="Masuk"
        android:textSize="32sp"
        android:textColor="@color/hijau"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/deskripsi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/admin_text"
        android:layout_marginStart="10sp"
        android:layout_marginTop="45sp"
        android:lines="2"
        android:text="@string/deskripsi"
        android:textColor="@color/black" />

    <TextView
        android:layout_alignBottom="@id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/usernam"
        android:textColor="@color/black"
        android:layout_marginBottom="70sp"
        />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/deskripsi"
        android:layout_marginTop="150dp"
        android:background="@drawable/border_outline"
        android:drawableStart="@drawable/ic_baseline_person_outline_24"
        android:drawablePadding="20dp"
        android:hint="Masukkan Nama Anda"
        android:paddingHorizontal="20dp"
        android:paddingVertical="15dp"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:maxLines="1"
        android:lines="1"
        android:singleLine="true"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/password"
        android:layout_marginBottom="70sp"
        android:text="@string/password"
        android:textColor="@color/black"

        />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/username"
        android:layout_marginTop="100dp"
        android:background="@drawable/border_outline"
        android:drawableStart="@drawable/ic_password"
        android:drawablePadding="25sp"
        android:hint="*******"
        android:paddingVertical="18dp"
        android:paddingStart="25sp"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:inputType="textPassword"
        android:maxLines="1"
        android:lines="1"
        android:singleLine="true"
        />

    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/password"
        android:layout_marginTop="180dp"
        android:text="@string/login"
        android:textColor="@color/white"
        android:background="@drawable/border_outline"
        android:backgroundTint="@color/hijau"
        android:paddingVertical="20dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/login"
        android:layout_marginTop="80sp"
        android:text="@string/register"
        android:textColor="@color/black"
        android:layout_centerHorizontal="true"
        />

</RelativeLayout>