<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:padding="20dp">

    <ImageView
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_arrow_back"
        />

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="220dp"
        android:text="@string/welcome"
        android:textColor="@color/black"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="40sp"
        android:textColor="#04764E"
        android:layout_alignTop="@id/welcome"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        android:textStyle="bold"
        />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/title"
        android:layout_alignTop="@id/title"
        android:layout_marginStart="122dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/ic_boga"
        />

    <TextView
        android:id="@+id/get_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/title"
        android:layout_marginStart="20dp"
        android:layout_marginTop="60dp"
        android:text="@string/text1"
        android:textColor="@color/black" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/get_start"
        android:layout_marginTop="35dp"
        android:background="@drawable/textbox_profile"
        android:backgroundTint="@color/white"
        android:text="Masuk Sebagai Pengguna"
        android:textColor="@color/black" />


</RelativeLayout>